--- a/session_05/form.html
+++ b/session_05/form.html
@@ -36,6 +36,25 @@
 
         <label for="Choice">Choice:</label>
         <select name = "Choice">
+          <option value = "-1" selected>[choose option]</option>
+          <option value = "1">One</option>
+          <option value = "2">Two</option>
+          <option value = "3">Three</option>
+        </select>
+        <br><br>
+
+        <input type = "submit" value = "Submit" /></td>
+
+      </form>
+    </div>
+
+  </div>
+
+
+
+  <script src="validation.js"></script>
+</body>
+</html>
 
 
 
